$Id: ChangeLog 2007/08/27 14:48:51 mallet $
2007/09/10
	Added a request to create a box in obstacle server.
	
2007/09/07
	Correction of a bug in Corba request that adds a polyhedron to a list.
	
hpp-corbaserver 1.0 released August 27th, 2007.
	
	4. Replaced ChppPolyhedron by CkppKCDPolyhedron since they are the same.
	3. Replaced ChppDevice by CkppDeviceComponent since
	  1 ChppDevice derives from CkppDeviceComponent and
	  2 The operations performed on objects of this type only concern
	    CkppDeviceComponent part.
	2. Make dependence to OpenHRP conditional, as it was initially.
	1. Simplified a lot interfaces of ChppciOpenHrpClient: no more
	argc and argv. Only loadHrp2Model() has been tested.